# python-elasticsearch-logging

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.cfg
examples/: __init__.py  elasticsearch_example.py
tests/: conftest.py  test_no_elastic_exists.py  test_write.py
