[tool.poetry]
name = "python_elasticsearch_logging"
version = "2.0.6"
description = "Minimalistic Elasticsearch logging handler"
authors = ["Bohdan Sydorov"]
readme = "README.md"
repository = "https://github.com/ashokpant/python-elasticsearch-logging"
keywords = ["elasticsearch", "logging"]

packages = [
    { include = "*", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.7, <4"
elasticsearch = ">=8,<9"
pytz = ">=2023.0"
urllib3 = "==1.26.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"